--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@plugin "daisyui" {
-  exclude: rootscrollgutter;
-}
+@plugin "daisyui";
 
-body {
-      margin: 0;
-      padding: 0;
+body, html {
+      @apply bg-gray-950 w-full min-h-screen m-0 p-0;
 }
 
 .modal-backdrop button {
       cursor: auto !important;
 }
+
