Refactor authentication and modal handling for code organisation
- Firebase related functions moved to separate fireabse file
- Updated import path for LogInAsGuestButton component.
- Enhanced global CSS for modal backdrop and layout shift prevention.
- Renamed closeModel function to closeModal for consistency.
- Wrapped application layout with AuthProvider for authentication context.
- Added change button functionality in PrivacySettings for email updates.
- Simplified UserSettings component by removing unused state and logic.
- Deleted obsolete firebase.ts file and moved Firebase initialization to lib/firebase.ts.
- Removed unused profile picture and updated loading state management in loadingSlice.
- Created AuthProvider component to manage user authentication state.
- Added SVG icons for branding and user interface.
- Refactored auth functions in lib/auth.ts for better organization and clarity.

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,12 @@
 @tailwind utilities;
 @plugin "daisyui";
 
+/* Verhindert das beim Modal die Maus nicht pointer ist wenn die maus außerhalb des modals ist (für das schließen des modals) */
 .modal-backdrop button {
       cursor: auto !important;
 }
 
+/* Verhindert das Layout-Shift beim Modal öffnen */
+:root {
+  scrollbar-gutter: unset !important;
+}
